feat: CRUD product + add products datas

--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -23,9 +23,9 @@
 	</style>
 
 	<div class="example-wrapper">
+		<img src={{ asset('logo/cybermatos.png') }} width="150px" alt="">
 		<h1>CyberMatos</h1>
-
-		Sites de produits informatique, incontournable pour les bonnes affaires !
+		<p>Sites de produits informatique, incontournable pour les bonnes affaires !</p>
 		<ul>
 			<li>Du matos increvable</li>
 			<li>Des prix défiant toute concurrence</li>
