feat: CRUD product + add products datas

--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -61,5 +61,8 @@
 				 '          '         '      '        '                '    '          '    '
 
 		</pre>
+		<p>---->
+			<a href="{{ path('app_product_index') }}">Voir le matos</a>
+		</p>
 	</div>
 {% endblock %}
