feat: route products & products/id

--- a/app/templates/home/index.html.twig
+++ b/app/templates/home/index.html.twig
@@ -62,7 +62,7 @@
 
 		</pre>
 		<p>---->
-			<a href="{{ path('app_product_index') }}">Voir le matos</a>
+			<a href="{{ path('app_product_list') }}">Voir le matos</a>
 		</p>
 	</div>
 {% endblock %}
