--- a/app/templates/product/list.html.twig
+++ b/app/templates/product/list.html.twig
@@ -41,5 +41,6 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('app_product_new') }}">Créer un produit</a>
+	<a href="{{ path('app_product_new') }}">Créer un produit</a><br>
+	<a href="{{ path('app_product_index') }}">{JSON}</a>
 {% endblock %}
