--- a/app/templates/product/new.html.twig
+++ b/app/templates/product/new.html.twig
@@ -8,5 +8,5 @@
 
 	{{ include('product/_form.html.twig') }}
 
-	<a href="{{ path('app_product_index') }}">Retour à la liste</a>
+	<a href="{{ path('app_product_list') }}">Retour au catalogue</a>
 {% endblock %}
