--- a/app/templates/product/edit.html.twig
+++ b/app/templates/product/edit.html.twig
@@ -8,7 +8,7 @@
 
 	{{ include('product/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-	<a href="{{ path('app_product_index') }}">Retour au catalogue</a>
+	<a href="{{ path('app_product_list') }}">Retour au catalogue</a>
 
 	{{ include('product/_delete_form.html.twig') }}
 {% endblock %}
