--- a/app/templates/product/show.html.twig
+++ b/app/templates/product/show.html.twig
@@ -31,9 +31,10 @@
 		</tbody>
 	</table>
 
-	<a href="{{ path('app_product_index') }}">Retour au catalogue</a>
+	<a href="{{ path('app_product_list') }}">Retour au catalogue</a>
 
-	<a href="{{ path('app_product_edit', {'id': product.id}) }}">Modifier</a>
+	<a href="{{ path('app_product_edit', {'id': product.id}) }}">Modifier</a><br>
+	<a href="{{ path('app_product_json', {'id': product.id}) }}">{JSON}</a>
 
 	{{ include('product/_delete_form.html.twig') }}
 {% endblock %}
