--- a/ansible/roles/deploy_application/templates/env.local.j2
+++ b/ansible/roles/deploy_application/templates/env.local.j2
@@ -1,3 +1,3 @@
 APP_ENV=prod
 APP_DEBUG=0
-DATABASE_URL="mysql://{{mysql_user}}:{{mysql_password}}@localhost:3307/{{mysql_database}}?serverVersion=10.5.18-MariaDB"
+DATABASE_URL="mysql://{{mysql_user}}:{{mysql_password}}@localhost:3307/{{mysql_database}}"
