feat: session cart

--- a/app/templates/product/list.html.twig
+++ b/app/templates/product/list.html.twig
@@ -6,6 +6,8 @@
 {% block body %}
 	<h1>Catalogue Produit</h1>
 
+	<img src={{ asset('icon/panier.png') }} width="50px" alt=""><a href="/order/panier" class="card-link">Voir mon panier</a>
+
 	<table class="table">
 		<thead>
 			<tr>
