--- a/app/templates/order/show.html.twig
+++ b/app/templates/order/show.html.twig
@@ -1,35 +1,59 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Order{% endblock %}
-
-{% block body %}
-    <h1>Order</h1>
-
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ order.id }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ order.createdAt ? order.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
-        </tbody>
-    </table>
-    {% for product in products %}
-
-							<p>{{ product.id }}</p>
-							<p>{{ product.name }}</p>
-
-					{% endfor %}
-
-    <a href="{{ path('app_order_index') }}">back to list</a>
-
-    <a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a>
-
-    {{ include('order/_delete_form.html.twig') }}
+{% block title %}Order
 {% endblock %}
 
+{% block body %}
+	<h1>Mon panier</h1>
+
+	{% if items | length > 0 %}
+
+		<table class="table">
+			<thead>
+				<tr>
+					<th>Image</th>
+					<th>Produit</th>
+					<th>Prix</th>
+					<th>Quantité</th>
+					<th>Total</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				{% for item in items %}
+					<tr>
+						<td><img src="{{ asset(item.product.image) }}" width="100px" alt=""></td>
+						<td>{{item.product.name}}</td>
+						<td>{{item.product.price}}</td>
+						<td>{{item.quantity}}</td>
+						<td>{{item.product.price * item.quantity}}</td>
+						<td>
+							<a href="{{path('app_remove_to_cart', {'id': item.product.id})}}" class="btn btn-danger btn-sm">
+								<i class="fas fa-trash">
+									delete</i>
+							</a>
+						</td>
+					</tr>
+				{%  endfor %}
+			</tbody>
+			<tfoot>
+				<td colspan="3">Total:
+				</td>
+				<td>{{total}}</td>
+				<td></td>
+			</tfoot>
+
+		</table>
+		<a href="{{ path('app_product_list') }}">back to list</a>
+		{# 
+		<a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a>
+																				
+		{{ include('order/_delete_form.html.twig') }} #}
 
 
+	{% else %}
+		<p>Le panier est vide</p>
+	{%  endif %}
+
+
+{% endblock %}
