--- a/app/templates/order/show.html.twig
+++ b/app/templates/order/show.html.twig
@@ -22,7 +22,7 @@
 			<tbody>
 				{% for item in items %}
 					<tr>
-						<td><img src="{{ asset(item.product.image) }}" width="100px" alt=""></td>
+						<td><img src="{{ asset(item.product.photo) }}" width="100px" alt=""></td>
 						<td>{{item.product.name}}</td>
 						<td>{{item.product.price}}</td>
 						<td>{{item.quantity}}</td>
@@ -46,9 +46,9 @@
 		</table>
 		<a href="{{ path('app_product_list') }}">back to list</a>
 		{# 
-		<a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a>
-																				
-		{{ include('order/_delete_form.html.twig') }} #}
+				<a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a>
+																						
+				{{ include('order/_delete_form.html.twig') }} #}
 
 
 	{% else %}
