--- a/app/templates/product/list.html.twig
+++ b/app/templates/product/list.html.twig
@@ -11,7 +11,6 @@
 	<table class="table">
 		<thead>
 			<tr>
-				<th>Id</th>
 				<th>Nom</th>
 				<th>Description</th>
 				<th>Prix</th>
@@ -22,26 +21,24 @@
 		</thead>
 		<tbody>
 			{% for product in products %}
-				<tr>
-					<td>{{ product.id }}</td>
-					<td>{{ product.name }}</td>
-					<td>{{ product.description }}</td>
-					<td>{{ product.price }}
-						€</td>
-					<td><img src="{{ asset(product.image) }}" width="150px" alt=""></td>
-					<td>{{ product.createdAt ? product.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-					<td>
-						<a href="{{ path('app_product_show', {'id': product.id}) }}">En savoir plus</a>
-						<a href="{{ path('app_product_edit', {'id': product.id}) }}">Modifier</a>
-					</td>
-				</tr>
-			{% else %}
-				<tr>
-					<td colspan="6">no records found</td>
-				</tr>
-			{% endfor %}
-		</tbody>
-	</table>
 
-	<a href="{{ path('app_product_new') }}">Créer un produit</a><br>
-{% endblock %}
+				<tr>
+					{# <td>{{ product.id }}</td> #}
+					<td>{{ product.name }}</td>
+					<td>{{ product.description }}&nbsp;</td>
+					<td>{{ product.price }}€</td>
+				</tr>
+			</td>
+			<td><img src="{{ asset(product.photo) }}" width="150px" alt=""></td>
+			<td>{{ product.createdAt ? product.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+			{# 	<td>
+																												<a href="{{ path('app_product_show', {'id': product.id}) }}">En savoir plus</a>
+																												<a href="{{ path('app_product_edit', {'id': product.id}) }}">Modifier</a>
+																											</td> #}
+		</tbody>
+	</tr>
+{% else %}
+	<tr>
+		<td colspan="6">no records found</td>
+	</tr>
+{% endfor %}</tbody></table><a href="{{ path('app_product_new') }}">Créer un produit</a><br>{% endblock %}
