--- a/app/templates/base.html.twig
+++ b/app/templates/base.html.twig
@@ -6,18 +6,20 @@
 			{% block title %}CyberMatos
 			{% endblock %}
 		</title>
-		<link
-		rel="icon" href="logo/cybermatos.png">
-		{# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+		<link rel="icon" href="logo/cybermatos.png">
 		{% block stylesheets %}
 			{{ encore_entry_link_tags('app') }}
+			<!-- Compiled and minified CSS -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+			<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		{% endblock %}
 
 		{% block javascripts %}
 			{{ encore_entry_script_tags('app') }}
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
 		{% endblock %}
 	</head>
-	<body>
-		{% block body %}{% endblock %}
-	</body>
-</html>
+	<body class="container"> {% block body %}{% endblock %}
+		</body>
+	</html>
