--- a/app/templates/order/show.html.twig
+++ b/app/templates/order/show.html.twig
@@ -45,14 +45,11 @@
 
 		</table>
 		<a href="{{ path('app_product_list') }}">back to list</a>
-		{# 
-				<a href="{{ path('app_order_edit', {'id': order.id}) }}">edit</a>
-																						
-				{{ include('order/_delete_form.html.twig') }} #}
-
 
 	{% else %}
 		<p>Le panier est vide</p>
+		<a href="{{ path('app_product_list') }}">Retour au catalogue
+		</a>
 	{%  endif %}
 
 
